--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 PyYAML
 mpi4py
 numpy
-# tensorflow==1.10.1
+tensorflow==1.14.0
 pillow
 gym
-stable-baselines>=2.4.0
+stable-baselines==2.4.1
 pytablewriter
-# -e git+git@github.com:tawnkramer/donkey.git@faa4a32b2aff452c6b46474029ea9e4b3168843d#egg=donkeycar
 opencv-python
 cloudpickle
 pygame
